@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 7;
+use Test::More tests => 6;
 
 use_ok('Padre::Plugin::Swarm');
 use_ok('Padre::Swarm::Identity');
@@ -10,6 +10,5 @@ use_ok('Padre::Swarm::Message');
 
 use_ok('Padre::Swarm::Transport::Multicast');
 use_ok('Padre::Swarm::Transport::IRC');
-use_ok('Padre::Swarm::Transport::XMPP');
 
 use_ok('Padre::Swarm::Service::Chat' );
